--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+*~
+output/
 *.pyc
+*.pt
+*.pkl
 .ipynb_checkpoints
-.idea/*.*
+.idea/
 caffe-fast-rcnn/build
 caffe-fast-rcnn/.buil_release
 lib/build
